AX: macOS VoiceOver doesn't announce when details element is expanded when using role group https://bugs.webkit.org/show_bug.cgi?id=180866 <rdar://problem/36074338>

Reviewed by Chris Fleizach.

Source/WebCore:

We should use is<HTMLDetailsElement> to check for the details parent instead
of using the role.

Added test cases to the existing test.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isExpanded const):

LayoutTests:

* accessibility/mac/details-summary-expected.txt:
* accessibility/mac/details-summary.html:


Canonical link: https://commits.webkit.org/201509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232285 268f45cc-cd09-0410-ab3c-d52691b4dbfc