Source/WebCore/accessibility/AccessibilityObject.cpp
@@ -2797,7 +2797,7 @@ bool AccessibilityObject::isExpanded() const
     // Summary element should use its details parent's expanded status.
     if (isSummary()) {
         if (const AccessibilityObject* parent = AccessibilityObject::matchedParent(*this, false, [] (const AccessibilityObject& object) {
-            return object.roleValue() == AccessibilityRole::Details;
+            return object.node() && is<HTMLDetailsElement>(object.node());
         }))
             return parent->isExpanded();
     }
